styles/style.css
/* ... */
.section-text__toggle-narration-btn--activated {
    box-shadow: 0px 0px 0 2px #fff;
}

.section-text__toggle-narration-btn--postponed {
    display: none;
}

.section-text__toggle-narration-btn-icon--hidden {
    display: none;    
}

.section-text__toggle-narration-btn-show-icon {
    fill: none;
    stroke-width: 1;
    stroke: #fff;
}

.section-text__toggle-narration-btn-show-icon {
    fill: none;
    stroke-width: 1;
    stroke: #fff;
}

.section-text__toggle-narration-btn-hide-icon {
    fill: #fff;
}

.section-text__content {
    overflow: auto;
    line-height: 1.34em;
}

@media (min-width:900px) {
    .section-text__content {
        padding: 0 1em;
    }
}

.section-text__content a {
    color: #5caac5;
    text-decoration: underline;
}

/* video-player */
.video-player {
    background: #fff;
}

@media (max-width: 900px) and (orientation: landscape) {
    .video-player--main-section {
        height: 100%;
    }
}

@media (max-width: 900px) and (orientation: portrait) {
    .video-player--main-section {
        width: 100%;
    }
}

@media (min-width:900px) {
    .video-player--main-section {
        flex: 1 1 auto;
        min-height: 0;
        width: 100%;
        display: flex;
        flex-direction: column;
    }
}

.video-player--subsection {
    width: 100%;
}

.video-player--hidden {
    display: none;
}

.video-player__video {
    width: auto;
    height: auto;
    display: block;
}

@media (max-width: 900px) and (orientation: landscape) {
    .video-player__video--main-section {
        height: 100%;
    }
}

@media (max-width: 900px) and (orientation: portrait) {
    .video-player__video--main-section {
        width: 100%;
    }
}

@media (min-width:900px) {
    .video-player__video--main-section {
        flex: 1;
        min-height: 0;
        width: 100%;
    }
}

.video-player__video--subsection {
    width: 100%;
    max-height: 50vh;
}

@media (min-width:900px) {
    .video-player__video--subsection {
        max-height: initial;
    }
}

.video-player--fullscreen .video-player__video {
    width: 100%;
    height: 100%;
    max-height: none;
}

.video-player__scrub-canvas {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    margin: auto;
}

.video-player__scrub-canvas--hidden {
    display: none;
}

.video-player__playback-btn-mobile {
    position: absolute;
    top: -1em;
    right: 0;
    bottom: 0;
    left: 0;
    margin: auto;
    box-sizing: border-box;
    width: 4em;
    height: 4em;
    padding: 1.3em;
    border: none;
    border-radius: 100%;
    box-shadow: 0px 0px 10px 0px #aaa;
    background: #fff;
    z-index: 3;
    opacity: 1;
    transition: opacity 0.25s;
}

@media (min-width: 900px) {
    .video-player__playback-btn-mobile {
        display: none;
    }
}

.video-player--playing .video-player__playback-btn-mobile {
    opacity: 0;
}

.video-player--playing .video-player__playback-btn-mobile--show {
    opacity: 1;
}

.video-player__playback-btn-mobile-icon {
    width: 100%;
    height: 100%;
    fill: #000;
}

.video-player--playing .video-player__playback-btn-mobile-play-icon {
    display: none;
}

.video-player:not(.video-player--playing) .video-player__playback-btn-mobile-pause-icon {
    display: none;
}

.video-player__controls-container {
    position: absolute;
    left: 0;
    bottom: 0;
    box-sizing: border-box;
    width: 100%;
    padding: 24px 16px 16px;
    background: linear-gradient(#00000000, #000000);
    opacity: 1;
    transition: opacity 0.25s;
}

.video-player--playing .video-player__controls-container {
    opacity: 0;
}

@media (min-width: 900px) {
    .video-player--playing:hover .video-player__controls-container {
        opacity: 1;
    }
}

.video-player--playing .video-player__controls-container--show {
    opacity: 1;
}

.video-player__top-controls-container {
    display: flex;
    align-items: center;
}

.video-player__control-btn {
    margin: 0;
    box-sizing: border-box;
    width: 2em;
    height: 2em;
    padding: 0.5em;
    border: none;
    background: none;
}

.video-player__control-btn-playback {
    margin-right: 0.75em;   
}

@media (max-width: 900px) {
    .video-player__control-btn-playback {
       display: none;
    }
}

.video-player__quality-changer {
    position: relative;
    margin-left: auto;
}

.video-player__quality-changer--hidden {
    visibility: hidden;
}

.video-player__quality-changer-open-btn {
    position: relative;
    box-sizing: border-box;
    height: 1.5em;
    width: 5.5em;
    border: none;
    border-radius: 6px;
    box-shadow: 0px 0px 0px 0px #fff;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 0.5em;
    background: none;
    color: #fff;
    font-size: 0.85em;
    font-weight: 600;
    cursor: pointer;
    transition: background 0.1s, box-shadow 0.1s;
    z-index: 2;
}

.video-player__quality-changer-open-btn:hover {
    box-shadow: 0px 0px 0px 2px #fff;
    background: #363636;
}

.video-player__quality-changer-open-btn--activated {
    box-shadow: 0px 0px 0px 2px #fff;
    background: #363636;
}

.video-player__quality-changer-open-btn-icon {
    box-sizing: border-box;
    width: 1em;
    height: 1em;
    fill: #fff;
}

.video-player__quality-options-menu {
    position: absolute;
    left: 0;
    bottom: 0;
    box-sizing: border-box;
    width: 100%;
    height: 4.25em;
    border-radius: 6px;
    padding: 0.25em 0.5em 1.25em;
    background: #363636;
    z-index: 1;
    overflow: hidden;
}

.video-player__quality-options-menu--transition-closed {
    transition: height 0.5s, padding 0.5s;
}

.video-player__quality-options-menu--transition-open {
    transition: height 0.5s, padding 0.5s, visibility 0s ease 0.5s;
}

.video-player__quality-options-menu--hidden {
    height: 0em;
    padding: 0em 0.5em 0em;
    visibility: hidden;
}
/* ... */

